sidebar collapses correctly now

--- a/src/components/stylesheets/stagingArea.scss
+++ b/src/components/stylesheets/stagingArea.scss
@@ -9,6 +9,6 @@
   transition: width 0.5s linear;
 
   &.expanded {
-    width: 95%;
+    width: 99%;
   }
 }
